BPER/DEVF/force-app/main/default/objects/RoleMDS__c/RoleMDS__c.object-meta.xml
<CustomObject>
    <label>MDS per Ruolo</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>MDS per Ruolo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDS per Ruoli</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>