BPER/DEVF/force-app/main/default/objects/RoleMDS__c/fields/ModelBranchKey__c.field-meta.xml
<CustomField>
    <fullName>ModelBranchKey__c</fullName>
    <formula>PTF_ServiceModel__r.Name &amp;&apos;_&apos;&amp;  TEXT(PTF_BranchTypology__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ModelBranchKey</label>
    <type>Text</type>
</CustomField>