BPER/DEVF/force-app/main/default/objects/RoleMDS__c/fields/PTF_BranchTypology__c.field-meta.xml
<CustomField>
    <fullName>PTF_BranchTypology__c</fullName>
    <label>Tipologia di filiale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BranchTypology</valueSetName>
    </valueSet>
</CustomField>