BPER/DEVF/force-app/main/default/objects/RoleMDS__c/fields/PTF_Division__c.field-meta.xml
<CustomField>
    <fullName>PTF_Division__c</fullName>
    <formula>PTF_ServiceModel__r.PTF_Division__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filiera</label>
    <type>Text</type>
</CustomField>