BPER/DEVF/force-app/main/default/objects/RoleMDS__c/fields/PTF_EndDate__c.field-meta.xml
<CustomField>
    <fullName>PTF_EndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data fine</label>
    <type>Date</type>
</CustomField>