BPER/DEVF/force-app/main/default/objects/RoleMDS__c/fields/PTF_IdCED__c.field-meta.xml
<CustomField>
    <fullName>PTF_IdCED__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID CED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>