BPER/DEVF/force-app/main/default/objects/RoleMDS__c/fields/PTF_Key__c.field-meta.xml
<CustomField>
    <fullName>PTF_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>