BPER/DEVF/force-app/main/default/objects/RoleMDS__c/fields/PTF_MacroDivision__c.field-meta.xml
<CustomField>
    <fullName>PTF_MacroDivision__c</fullName>
    <formula>PTF_ServiceModel__r.PTF_MacroDivision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Macrofiliera</label>
    <type>Text</type>
</CustomField>