BPER/DEVF/force-app/main/default/objects/RoleMDS__c/fields/PTF_RoleTypology__c.field-meta.xml
<CustomField>
    <fullName>PTF_RoleTypology__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipologia di Ruolo</label>
    <referenceTo>RoleTypology__c</referenceTo>
    <relationshipLabel>MDS per Ruoli</relationshipLabel>
    <relationshipName>MDS_per_Ruoli</relationshipName>
    <type>Lookup</type>
</CustomField>