BPER/DEVF/force-app/main/default/objects/RoleMDS__c/fields/PTF_ServiceModel__c.field-meta.xml
<CustomField>
    <fullName>PTF_ServiceModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Macro-modello di servizio</label>
    <referenceTo>ServiceModel__c</referenceTo>
    <relationshipLabel>MDS per Ruoli</relationshipLabel>
    <relationshipName>MDS_per_Ruoli</relationshipName>
    <type>Lookup</type>
</CustomField>